Refactor `DialogPane`: extend `StackPane` instead of `Pane.